--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,13 @@ local_settings.py
 Thumbs.db
 
 # Virtualenv
+myvenv/
 venv/
 ENV/
 .env/
 .venv/
 
 # Migrations
-**/migrations/
-**/migrations/*.py[cod]
+**/migrations/*.py
 !**/migrations/__init__.py
+**/migrations/*.pyc
